# OmniAmp

./: .gitignore  .gitmodules  CMakeLists.txt  Gamma.jucer  LICENSE  Notes.md  README.md  validate.sh
.github/workflows/: Deploy.yml  ci.yml  cmake-multi-platform.yml
Manual/: Gamma.md
Resources/IRs/: grafton bass deluxe.wav.reapeaks
Resources/Presets/: Default Bass.aap  Default Channel.aap  Default Guitar.aap
Source/: Activation.hpp  MainComponent.cpp  MainComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  WDFtest.h  tuner.cpp  tuner.h
Source/Presets/: CMakeLists.txt  PresetComp.h  PresetManager.h
Source/Processors/: CMakeLists.txt  Cab.h  Comp.h  DistPlus.h  EmphasisFilters.h  Enhancer.h  MSMatrix.h  PostFilters.h  PreFilters.h  Processors.h  Room.h  SIMD.h  ToneStack.h  Tube.h  WDFtest.h  refactor.hpp
Source/Processors/Reverb/: CMakeLists.txt  Diffuser.h  MixMatrix.h  MixedFeedback.h  Reverb.hpp  StereoMultiMixer.h
Source/UI/: AmpControls.h  Background.h  Button.h  CMakeLists.txt  CabComponent.h  Cabs.h  ChoiceMenu.h  DownloadManager.h  EnhancerComponent.h  Init.h  Knob.h  Menu.h  PreComponent.h  Reverb.h  ReverbComponent.h  SineWave.hpp  Splash.h  Tuner.hpp  UI.h  UI_Top.h
factory_presets/Drums/: RetroDrums.aap
install_scripts/: mac-installer.sh
installer/: OmniAmp.pkgproj  mac-installer.sh  win-installer.sh
manual/: Gamma.md  Gamma.typ  OmniAmp.typ
presets/Bass/: Default Bass.aap  IndustrialBass.aap  ModernBass.aap  PostPunk.aap  RetroBass.aap
presets/Drums/: AggressiveKick.aap  FatSnare.aap  PunchyDrums.aap  RoomsCrush.aap  WarmOverhead.aap
presets/Guitar/: BrightRhythm.aap  BritPunch.aap  ClearThrash.aap  CrispClean.aap  Default Guitar.aap  SoaringLead.aap  SurfGuitar.aap  ThickRhythm.aap
presets/Reverb/: Ambience.aap  DrumRoom.aap  SnareVerb.aap  VocalHall.aap  VocalRoom.aap
presets/Vocals/: AggressiveVocals.aap  CrunchVocals.aap  SmoothVocals.aap
scripts/: mac-installer.sh  win-installer.sh
